send registration mail

--- a/content/styles.css
+++ b/content/styles.css
@@ -13,7 +13,7 @@
 
 html {
     font-size: 100%;
-    background-image: url('images/blurry.jpg');
+    /*background-image: url('images/blurry.jpg');*/
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -163,7 +163,7 @@ li#site-logo img{
 /* -------------------------------------------------------------------------- */
 
 #register {
-    width: 300px;
+    width: 900px;
 }
 
 input.write_field {
