login and register
some css

--- a/content/styles.css
+++ b/content/styles.css
@@ -71,7 +71,7 @@ h1{
     font-weight: 400;
     height: 60px;
     width: 100%;
-    background: #9e858e;
+    background: none;
     line-height: 60px;
     color: white;
 
@@ -237,6 +237,14 @@ footer {
 /* -------------------------------------------------------------------------- */
 /* -----| LOGIN FORM |------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
+#login{
+    position: absolute;
+    top: 200px;
+    left: 850px;
+    color: white;
+    background: none;
+    display: inline;
+}
 
 /* -------------------------------------------------------------------------- */
 /* -----| PHOTOS |------------------------------------------------------- */
@@ -247,6 +255,11 @@ footer {
 /* -------------------------------------------------------------------------- */
 
 #register {
+    position: absolute;
+    top: 200px;
+    left: 700px;
+    color: black;
+    background: none;
     width: 500px;
 }
 
