--- a/content/styles.css
+++ b/content/styles.css
@@ -376,6 +376,26 @@ div.latest_photos{
     top: 20px;
     left: 270px;
 }
+
+#search{
+    position: absolute;
+    width: 700px;
+    height: 70px;
+    top: 0px;
+    left: 385px;
+    color: white;
+    text-align: center;
+    background-color: #1A8DA9;
+    border-radius: 6px;
+    margin-left: -140px;
+}
+
+#search>form.search_album_name{
+    font-size: 18px;
+    background: none;
+    margin-top: -50px;
+}
+
 /* -------------------------------------------------------------------------- */
 /* -----| REGISTER FORM |------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
