--- a/content/styles.css
+++ b/content/styles.css
@@ -2,49 +2,6 @@
 /* -----| GENERAL |---------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 
-/** {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-}
-html {
-    font-size: 100%;
-    background-image: url('images/header.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-body {
-    font-family: Arial, Helvetica, sans-serif, Verdana;
-    font-size: 1em;
-    padding: 3% 4%;
-}
-#website {
-    margin: 0 auto;
-    width: 85%;
-    padding:3%;
-    border-radius: 2%;
-    background-color: rgba(171, 44, 209, 0.6);
-}
-ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 5px;
-}
-img.thumbnail {
-    width: 7em ;
-    height: 7em;
-}
-body>main:after {
-    content: '';
-    display: block;
-    clear: both;
-}*/
-
-
 
 *{
     padding: 0;
@@ -58,132 +15,128 @@ html {
     background-attachment: fixed;
     background-size: cover;
 }
+
 html>head.icon{
     content: url("/content/images/209457-200.png");
     visibility: visible;
 }
 
-h1{
+body {
+    font-family: Arial, Helvetica, sans-serif, Verdana;
+    font-size: 1em;
+    padding: 0 2% 3% 2%;
+    min-height: 600px;
+}
+
+div.content {
+    margin-left: 20%;
+    padding-top: 40px;
+}
+
+
+/* -------------------------------------------------------------------------- */
+/* -----| HEADER, NAV |--------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+
+header {
+    width: 16%;
+    height: 100%;
+    position: fixed;
+    background-color: #1A8DA9;
+    background-size: cover;
+}
+
+ul#header li a{
     font-family: Arial, sans-serif;
-    font-weight: 400;
+    font-weight: 800;
     height: 60px;
     width: 100%;
     background: none;
     line-height: 60px;
-    color: white;
-
-}
-h2{
-    font-family: Arial, sans-serif;
-    font-weight: 400;
-    height: 60px;
-    width: 100%;
-    background: none;
-    line-height: 60px;
-    color: black;
-}
-
-div a{
-    text-decoration: none;
     color: white;
     padding:20px;
     padding-right:100px;
+    text-decoration: none;
 }
 
-div ul li{
+ul#header li{
     list-style-type: none;
     display: block;
     padding: 15px;
     border-bottom: 1px solid #d3f0f6;
 }
-div ul li:hover{
+
+ul#header li:hover{
     background: #d3f0f6;
     transition: linear all 0.40s;
     margin: 10px;
 }
-div ul li a:hover{
+
+ul#header li a:hover{
     color: black;
 }
+
 .selected{
     background: white;
 }
+
 .selected a{
     color: black;
 }
 
+#logged-in-info {
+    position: absolute;
+    top: 30px;
+    right: 10px;
+    color: black;
+    background: none;
+    display: inline;
+    font-size: 30px;
+}
+
+ #logged-in-info form {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+
+
 
 /* -------------------------------------------------------------------------- */
-/* -----| HEADER, FOOTER |--------------------------------------------------- */
+/* -----| FOOTER |--------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
-header{
-    width: 250px;
-    height: 666px;
-    background-color: #1A8DA9;
-    background-size: cover;
 
-}
-header>ul>li>a {
 
-    color: white;
-    text-align: center;
 
-}
+
 footer {
     color: black;
     list-style-type: none;
     margin: 10px 0;
     padding: 5px;
+    padding-top: 150px;
     text-align:center;
     background:none;
     overflow: hidden;
 
 }
 
-div.date{
-    color: black;
+header ul li a img {
+    width: 80px;
+    width: 160px;
+    padding-left: 20px;
 }
 
-label{
-    text-align: left;
+
+/* -------------------------------------------------------------------------- */
+/* -----| ABOUT US |--------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+
+#googleMap {
+    border: solid 2px silver;
 }
-
-
-/*header ul li {*/
-/*float: left;*/
-/*}*/
-
-/*header>ul>li>a, footer {*/
-/*display: block;*/
-/*color: white;*/
-/*text-align: center;*/
-/*padding: 14px 16px;*/
-/*text-decoration: none;*/
-/*vertical-align: middle;*/
-/*font-size: 1.2em;*/
-
-/*}*/
-
-/*header ul li a:hover:not(.active) {*/
-/*background-color: darkcyan;*/
-/*border-radius: 12px;*/
-/*}*/
-
-/*header ul li a:active {background-color: #4CAF50;}*/
-
-/*header ul li.right {*/
-/*float: right;*/
-/*color: white;*/
-/*}*/
-
-/*@media screen and (max-width: 600px){*/
-/*header ul li.right,*/
-/*header ul li {float: none;}*/
-/*}*/
-
-/*li#site-logo img{*/
-/*width: 12%;*/
-/*height:17%;*/
-/*}*/
 
 
 /* -------------------------------------------------------------------------- */
@@ -192,20 +145,22 @@ label{
 
 .button {
     display: inline-block;
-    border-radius: 2px;
-    background-color: seagreen;
-    border: none;
-    color: #FFFFFF;
+    background-color: rgba(44, 209, 178, 0.92);
+    border: solid rgba(0, 0, 0, 0.18) 3px;
+    color: rgba(255, 251, 244, 0.84);
     text-align: center;
-    font-size: 1em;
-    padding: 10px 5px 10px 5px;
+    font-size: 18px;
+    padding: 10px 20px 10px 20px;
     width: auto;
     transition: all 0.5s;
     cursor: pointer;
-    margin: 5px;
+    margin: 10px;
+    border-radius: 10px;
+    font-family: Arial, sans-serif;
+    font-weight: 800;
 }
 
-.button span {
+.button span{
     cursor: pointer;
     display: inline-block;
     position: relative;
@@ -213,7 +168,6 @@ label{
 }
 
 .button span:after {
-    content: '»';
     position: absolute;
     opacity: 0;
     top: 0;
@@ -221,136 +175,58 @@ label{
     transition: 0.5s;
 }
 
-.button:hover span {
-    padding-right: 25px;
+.button:hover {
+    border-radius: 0;
 }
 
-.button:hover span:after {
-    opacity: 1;
-    right: 0;
+.home_not_logged_div  a{
+    text-decoration: none;
+    color: white;
 }
 
+#home_not_logged button.button{
+    padding: 20px;
+}
+
+div#logged-in-info .button{
+    padding: 10px;
+    font-size:12px;
+}
 
 /* -------------------------------------------------------------------------- */
 /* -----| LOGIN FORM |------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
-#login{
-    position: absolute;
-    top: 100px;
-    left: 850px;
+
+#login, #register, .upload_photo{
     color: white;
     display: inline;
+    margin-left: 20%;
 }
 
-
-.container{
+.container {
+    margin-left: 38%;
+    margin-top: 9%;
     width: 500px;
-    height: 350px;
+    height: 400px;
     text-align: center;
-    padding: 40px;
     background-color: #1A8DA9;
     border-radius: 6px;
-    margin: -15px;
-    margin-left: -140px;
 
-}
-
-#login h1 {
-    color: white;
-    margin-top: 10px;
-    margin-left: -140px;
-    padding: 5px;
 }
 
 .container h2 {
-    margin-left: -20px;
-    padding: 5px;
+    margin-top: -20px;
 }
 
-input.write_field[type="email"],input.write_field[type="password"]{
-    height: 45px;
-    width: 100px;
-    font-size: 18px;
-    border: none;
-    margin-bottom: 20px;
-    border-radius: 4px;
-    background-color: #fff;
-    padding-left: 20px;
-}
-
-img.login-user, img.login-pass{
-    margin-left: -45px;
-    margin-bottom: -10px;
-}
-
-a.login {
-    color: #fff;
-    margin-left: 80px;
-}
-
-img.login{
-    margin-left: 0px;
+.container img, #register img{
     width: 120px;
     height: 120px;
-    margin-top: -78px;
-    margin-bottom: 10px;
+    margin-top: -37px;
+    margin-bottom: 30px;
 
 }
 
-#logged-in-info {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: white;
-    background: none;
-    display: inline;
-}
-
-#logged-in-info form {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-/* -------------------------------------------------------------------------- */
-/* -----| PHOTOS |------------------------------------------------------- */
-/* -------------------------------------------------------------------------- */
-#album {
-    position: absolute;
-    width: 700px;
-    height: 70px;
-    top: 0px;
-    left: 385px;
-    color: white;
-    text-align: center;
-    background-color: #1A8DA9;
-    border-radius: 6px;
-    margin-left: -140px;
-   }
-
-#album>form.upload_photo_form{
-    font-size: 18px;
-    background: none;
-    margin-top: -50px;
-
-}
-
-#create{
-    position: absolute;
-    background-color: #1A8DA9;
-    width: 550px;
-    height: 150px;
-    border-radius: 6px;
-    text-align: left;
-    top: 150px;
-    left: 730px;
-    color: white;
-    display: inline;
-    padding: 20px;
-}
-
-
-#create>input.write_field[type="text"]{
-
+input.write_field[type="email"],input.write_field[type="password"], input.write_field[type="text"]{
     height: 45px;
     width: 300px;
     font-size: 18px;
@@ -358,94 +234,170 @@ img.login{
     margin-bottom: 20px;
     border-radius: 4px;
     background-color: #fff;
-    padding-left: 10px;
+    padding-left: 40px;
 }
 
-article {
+.form-input::before{
+    content: url("/content/images/icon-user-name.png");
     position: absolute;
-    top: 100px;
-    left: 50px;
-    color: white;
-    display: inline;
-    text-align: left;
-    margin: 5px;
+    padding-left: 5px;
+    padding-top: 7px;
+    font-size: 35px;
 }
 
-div.latest_photos{
-    position: absolute;
-    top: 20px;
-    left: 270px;
+.form-input:nth-child(2)::before{
+    content: url("/content/images/icon-pwd.png");
+
 }
 
-#search{
-    position: absolute;
-    width: 700px;
-    height: 70px;
-    top: 0px;
-    left: 385px;
-    color: white;
-    text-align: center;
-    background-color: #1A8DA9;
-    border-radius: 6px;
-    margin-left: -140px;
+a.login{
+    color: #fff;
+    margin-left: 80px;
 }
 
-#search>form.search_album_name{
-    font-size: 18px;
-    background: none;
-    margin-top: -50px;
-}
+
 
 /* -------------------------------------------------------------------------- */
 /* -----| REGISTER FORM |------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 
 #register{
-    position: absolute;
-    top: 100px;
-    left: 850px;
     color: white;
-    display: inline;
-}
-
-
-#register>div.container{
+    display: inline-block;
+    margin-left: 38%;
+    margin-top: 5%;
     width: 500px;
-    height: 450px;
+    height: auto;
     text-align: center;
     background-color: #1A8DA9;
     border-radius: 6px;
-    margin: -15px;
-    padding: 10px;
-    margin-left: -140px;
 }
 
-input.write_field[type="text"],input.write_field[type="email"],
-input.write_field[type="password"],input.write_field[type="confirm_password"],
-input.write_field[type="city"]{
-    margin-top: 5px;
-    height: 45px;
-    width: 300px;
-    font-size: 18px;
+#register h1, #register h3 {
+    padding-bottom: 30px;
+}
+
+#register p label {
+    font-size: 1.4em;
+}
+
+/*
+input.write_field {
+    padding:5px;
+}
+*/
+
+#register input[type=text], #register input[type=password], #register input[type=email] {
+    width: 80%;
+}
+
+fieldset {
     border: none;
-    margin-bottom: 6px;
-    border-radius: 4px;
-    background-color: #fff;
-    margin-right: 8px;
-    padding-left: 167px;
 }
 
-#register h1 {
-    color: white;
-    margin-top: 10px;
-    margin-left: -145px;
+#register form  {
+    padding-bottom: 30px;
+}
+
+/* -------------------------------------------------------------------------- */
+/* -----| PHOTOS |------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+
+
+
+ul li {
+    list-style: none;
+    display: inline-block;
     padding: 5px;
 }
 
-#register h3{
-    color: black;
-    margin-bottom: 10px;
+
+img#delete {
+    width: 15px;
+    height: 15px;
 }
+
+
+div.content div {
+    display: inline-block;
+}
+
+div.content ul{
+    padding-top: 30px;
+
+}
+
+.home_not_logged_div {
+    padding-top: 10%;
+    padding-left: 28%;
+    width: 300px;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.home_not_logged_div p {
+    padding: 30px;
+}
+
+
+.upload_photo {
+    width: 450px;
+    height: 150px;
+    text-align: center;
+    background-color: #1A8DA9;
+    border-radius: 6px;
+    font-size: 1.3em;
+    padding-top: 20px;
+}
+
+input[type="file"] {
+    font-size: 20px;
+}
+
+
+#album {
+    width: 700px;
+    height: 170px;
+    top: 200px;
+    left: 0px;
+    color: white;
+    text-align: center;
+    background-color: #1A8DA9;
+    border-radius: 6px;
+    margin-left: 200px;
+}
+
+#album>form.upload_photo_form{
+    font-size: 18px;
+    background: none;
+    margin-top: 10px;
+
+}
+
+.photo_container li a img{
+    border-radius: 8px;
+    border: solid 2px silver;
+}
+
+
+/* -------------------------------------------------------------------------- */
+/* -----| ALBUMS |----------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+
+img.thumbnail {
+    width: 10em ;
+    height: 10em;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+    border-bottom-left-radius: 5%;
+    border-bottom-right-radius: 5%;
+}
+
+
+
+
 
 
 /* -------------------------------------------------------------------------- */
@@ -467,6 +419,13 @@ input.write_field[type="city"]{
     font-size: 10pt;
 }
 
+.upload_photo_form {
+    padding:1%;
+    width: 40%;
+    margin: auto;
+}
+
+
 #upload_photo {
     position: absolute;
     top: 10px;
@@ -481,42 +440,25 @@ input.write_field[type="city"]{
     margin-right: 10px;
 }
 
+
+
 /* -------------------------------------------------------------------------- */
 /* -----| DEFAULT |---------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 
-#contact{
-    position: absolute;
-    top: 100px;
-    left: 850px;
-    color: white;
-    display: inline;
+ul#messages {
+    padding-top: 20px;
 }
-
-
-/*body>header {*/
-/*padding: 5px;*/
-/*}*/
-
-/*body>header>a>img, body>header a  {*/
-
-/*}*/
-
-/*body>footer {*/
-/*background: #eee;*/
-/*padding: 5px;*/
-/*margin: 10px 0;*/
-/*text-align: center;*/
-/*}*/
-
 
 ul#messages li {
     display: block;
-    width: 80%;
+    width: 60%;
     margin: 5px auto;
     text-align: center;
-    padding: 5px;
+    padding: 15px;
     border-radius: 5px;
+    font-size: 1.2em;
+    font-weight: 300;
 }
 
 ul#messages li.info {
@@ -533,13 +475,3 @@ ul#messages li.error {
     margin-left: 10px;
     color: red;
 }
-
-/*#logged-in-info {*/
-/*float: right;*/
-/*margin-top: 18px;*/
-/*}*/
-
-/*#logged-in-info form {*/
-/*display: inline-block;*/
-/*margin-right: 10px;*/
-/*}*/
